# Raspberry_Adafruit_SHT4X

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md
.github/workflows/: githubci.yml
cmake/toolchains/: rpi-aarch64.cmake  rpi-armhf.cmake
docs/: cpp-port-structure.md  porting-status.md
examples/: monitor.cpp  read_once.cpp  rpi_flow.cpp
include/sht4x/: constants.hpp  hardware.hpp  sht4x.hpp
src/: hardware.cpp  sht4x.cpp
tests/: test_main.cpp
